method for returning Core command responses
